--- a/index.html
+++ b/index.html
@@ -7,18 +7,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .card {
-            border: none;
-        }
-        .footer {
-            border-top: 1px solid #dee2e6;
-        }
-        .nav-tabs .nav-link {
-            font-weight: 500;
-        }
+        body { background-color: #f8f9fa; }
+        .card { border: none; }
+        .footer { border-top: 1px solid #dee2e6; }
+        .nav-tabs .nav-link { font-weight: 500; }
     </style>
 </head>
 <body>
@@ -79,29 +71,54 @@
     </div>
     <footer class="footer bg-white py-3">
         <div class="container text-center">
-            <a href="https://validator.w3.org/check?verbose=1&amp;uri=referer" title="Valid HTML 5!">
-                <img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_32.png" alt="Valid HTML 5!" height="32" width="32"/>
-            </a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer" title="Valid CSS!">
-                <img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" height="31" width="88"/>
-            </a>
+            <a href="https://validator.w3.org/check?verbose=1&amp;uri=referer" title="Valid HTML 5!"><img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_32.png" alt="Valid HTML 5!" height="32" width="32"/></a>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer" title="Valid CSS!"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" height="31" width="88"/></a>
         </div>
     </footer>
     <!-- jQuery and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript">
+        var csw_url = {
+            "ECCC": "https://catalogue.ec.gc.ca/geonetwork/srv/eng/csw",
+            "EDH":  "https://api-proxy-dev.edh-cde.unclass.dfo-mpo.gc.ca/data-sharing/external/eng/csw"
+        };
+        var pagesize = 10;
+
+        function search(serviceType, startPosition) {
+            var url = csw_url[serviceType] + "?service=CSW&version=2.0.2&request=GetRecords&ElementSetName=full&typeNames=csw:Record&maxRecords=" + pagesize + "&startPosition=" + (startPosition || 1);
+            var freetext = $('#input-anytext').val().trim();
+            if (freetext) {
+                url += "&constraintLanguage=CQL_TEXT&constraint=csw:AnyText LIKE '%" + encodeURIComponent(freetext) + "%'";
+            }
+            $.ajax({
+                url: url,
+                dataType: 'xml',
+                success: function(xml) {
+                    var rows = [];
+                    $(xml).find('csw\\:Record, Record').each(function(){
+                        var title = $(this).find('dc\\:title, title').first().text();
+                        var date  = $(this).find('dc\\:date, date').first().text();
+                        var desc  = $(this).find('dc\\:abstract, abstract').first().text();
+                        rows.push('<tr><td>'+title+'</td><td>'+date+'</td><td>'+desc+'</td></tr>');
+                    });
+                    var tableId = (serviceType === 'EDH') ? '#table-csw-results-edh' : '#table-csw-results-eccc';
+                    $(tableId).find('tbody').html(rows.join(''));
+                },
+                error: function() {
+                    alert('Failed to fetch records from ' + serviceType);
+                }
+            });
+        }
+
         $(document).ready(function(){
             $("#form-search").on('submit', function(e) {
                 e.preventDefault();
-                var activeTabId = $('.nav-tabs .active').attr('id');
-                if (activeTabId === 'tab-edh') {
-                    search("EDH");
-                } else {
-                    search("ECCC");
-                }
+                var service = $('.nav-tabs .active').attr('id') === 'tab-edh' ? 'EDH' : 'ECCC';
+                search(service);
             });
-            search("ECCC");
+            // Initial load
+            search('ECCC');
         });
     </script>
 </body>
