--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Institute XYZ</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
     <style>
-        body { background-color: #f8f9fa; }
-        .card { border: none; }
-        .footer { border-top: 1px solid #dee2e6; }
+        body { background-color: #f1f3f5; }
+        .card { border: none; border-radius: 0.5rem; }
         .nav-tabs .nav-link { font-weight: 500; }
+        .search-bar .form-control { border-right: 0; }
+        .search-bar .input-group-append .btn { border-radius: 0 0.5rem 0.5rem 0; }
+        .table thead th { border-bottom: 2px solid #dee2e6; }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-        <a class="navbar-brand font-weight-bold" href="#">Institute XYZ</a>
-    </nav>
-    <div class="container my-4">
+    <div class="container my-5">
+        <h1 class="mb-4">Institute XYZ</h1>
         <div class="card shadow-sm">
             <div class="card-body">
                 <form id="form-search">
-                    <div class="form-row align-items-center">
-                        <div class="col-md-8 mb-2">
-                            <input type="text" class="form-control form-control-lg" id="input-anytext" placeholder="Search Terms">
-                        </div>
-                        <div class="col-md-4 mb-2 text-right">
-                            <button type="submit" class="btn btn-primary btn-lg btn-block">Search</button>
+                    <!-- Search input + button -->
+                    <div class="input-group input-group-lg mb-4 search-bar">
+                        <input type="text" id="input-anytext" class="form-control" placeholder="Search Terms" />
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="submit">Search</button>
                         </div>
                     </div>
-                    <ul class="nav nav-tabs mt-3" id="cswTabs" role="tablist">
+                    <!-- Tabs -->
+                    <ul class="nav nav-tabs" id="cswTabs" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="tab-eccc" data-toggle="tab" href="#tab-csw-results-eccc" role="tab">Our institute's data</a>
                         </li>
@@ -40,9 +40,13 @@
                     <div class="tab-content mt-3" id="cswTabsContent">
                         <div class="tab-pane fade show active" id="tab-csw-results-eccc" role="tabpanel">
                             <div class="table-responsive">
-                                <table class="table table-striped table-hover" id="table-csw-results-eccc">
+                                <table class="table table-hover" id="table-csw-results-eccc">
                                     <thead>
-                                        <tr><th>Title</th><th>Date</th><th>Description</th></tr>
+                                        <tr>
+                                            <th scope="col">Title</th>
+                                            <th scope="col">Date</th>
+                                            <th scope="col">Description</th>
+                                        </tr>
                                     </thead>
                                     <tbody></tbody>
                                 </table>
@@ -50,74 +54,81 @@
                         </div>
                         <div class="tab-pane fade" id="tab-csw-results-edh" role="tabpanel">
                             <div class="table-responsive">
-                                <table class="table table-striped table-hover" id="table-csw-results-edh">
+                                <table class="table table-hover" id="table-csw-results-edh">
                                     <thead>
-                                        <tr><th>Title</th><th>Date</th><th>Description</th></tr>
+                                        <tr>
+                                            <th scope="col">Title</th>
+                                            <th scope="col">Date</th>
+                                            <th scope="col">Description</th>
+                                        </tr>
                                     </thead>
                                     <tbody></tbody>
                                 </table>
                             </div>
                         </div>
                     </div>
-                    <nav>
-                        <ul class="pagination justify-content-center mt-3">
-                            <li id="li-previous" class="page-item"><a class="page-link" id="a-previous" href="#">Previous</a></li>
-                            <li id="li-next" class="page-item"><a class="page-link" id="a-next" href="#">Next</a></li>
+                    <!-- Pagination -->
+                    <nav class="mt-4">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" id="li-previous"><a class="page-link" id="a-previous" href="#">Previous</a></li>
+                            <li class="page-item" id="li-next"><a class="page-link" id="a-next" href="#">Next</a></li>
                         </ul>
                     </nav>
                 </form>
             </div>
         </div>
     </div>
-    <footer class="footer bg-white py-3">
-        <div class="container text-center">
-            <a href="https://validator.w3.org/check?verbose=1&amp;uri=referer" title="Valid HTML 5!"><img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_32.png" alt="Valid HTML 5!" height="32" width="32"/></a>
-            <a href="https://jigsaw.w3.org/css-validator/check/referer" title="Valid CSS!"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" height="31" width="88"/></a>
-        </div>
+    <!-- Footer validators -->
+    <footer class="text-center py-3">
+        <a href="https://validator.w3.org/check?verbose=1&amp;uri=referer" title="Valid HTML 5!"><img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_32.png" alt="Valid HTML 5!" height="32" width="32" /></a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer" title="Valid CSS!"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" height="31" width="88" /></a>
     </footer>
-    <!-- jQuery and Bootstrap JS -->
+    <!-- jQuery & Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-        var csw_url = {
-            "ECCC": "https://catalogue.ec.gc.ca/geonetwork/srv/eng/csw",
-            "EDH":  "https://api-proxy-dev.edh-cde.unclass.dfo-mpo.gc.ca/data-sharing/external/eng/csw"
+    <script>
+        const csw_url = {
+            ECCC: 'https://catalogue.ec.gc.ca/geonetwork/srv/eng/csw',
+            EDH: 'https://api-proxy-dev.edh-cde.unclass.dfo-mpo.gc.ca/data-sharing/external/eng/csw'
         };
-        var pagesize = 10;
+        const pagesize = 10;
 
-        function search(serviceType, startPosition) {
-            var url = csw_url[serviceType] + "?service=CSW&version=2.0.2&request=GetRecords&ElementSetName=full&typeNames=csw:Record&maxRecords=" + pagesize + "&startPosition=" + (startPosition || 1);
-            var freetext = $('#input-anytext').val().trim();
-            if (freetext) {
-                url += "&constraintLanguage=CQL_TEXT&constraint=csw:AnyText LIKE '%" + encodeURIComponent(freetext) + "%'";
-            }
-            $.ajax({
-                url: url,
-                dataType: 'xml',
-                success: function(xml) {
-                    var rows = [];
-                    $(xml).find('csw\\:Record, Record').each(function(){
-                        var title = $(this).find('dc\\:title, title').first().text();
-                        var date  = $(this).find('dc\\:date, date').first().text();
-                        var desc  = $(this).find('dc\\:abstract, abstract').first().text();
-                        rows.push('<tr><td>'+title+'</td><td>'+date+'</td><td>'+desc+'</td></tr>');
-                    });
-                    var tableId = (serviceType === 'EDH') ? '#table-csw-results-edh' : '#table-csw-results-eccc';
-                    $(tableId).find('tbody').html(rows.join(''));
-                },
-                error: function() {
-                    alert('Failed to fetch records from ' + serviceType);
-                }
-            });
+        function search(serviceType, startPosition = 1) {
+            let url = `${csw_url[serviceType]}?service=CSW&version=2.0.2&request=GetRecords&ElementSetName=full&typeNames=csw:Record&maxRecords=${pagesize}&startPosition=${startPosition}`;
+            const freetext = $('#input-anytext').val().trim();
+            if (freetext) url += `&constraintLanguage=CQL_TEXT&constraint=csw:AnyText LIKE '%${encodeURIComponent(freetext)}%'`;
+
+            $.ajax({ url, dataType: 'xml' })
+             .done(xml => {
+                const rows = [];
+                $(xml).find('csw\\:Record, Record').each(function() {
+                    const title = $(this).find('dc\\:title, title').first().text();
+                    const date = $(this).find('dc\\:date, date').first().text();
+                    const desc = $(this).find('dc\\:abstract, abstract').first().text();
+                    rows.push(`<tr><td>${title}</td><td>${date}</td><td>${desc}</td></tr>`);
+                });
+                const tableId = serviceType === 'EDH' ? '#table-csw-results-edh' : '#table-csw-results-eccc';
+                $(`${tableId} tbody`).html(rows.join(''));
+            })
+            .fail(() => alert(`Failed to fetch records from ${serviceType}`));
         }
 
-        $(document).ready(function(){
-            $("#form-search").on('submit', function(e) {
+        $(function() {
+            $('#form-search').on('submit', e => {
                 e.preventDefault();
-                var service = $('.nav-tabs .active').attr('id') === 'tab-edh' ? 'EDH' : 'ECCC';
+                const service = $('.nav-tabs .active').attr('id') === 'tab-edh' ? 'EDH' : 'ECCC';
                 search(service);
             });
-            // Initial load
+
+            $('a[data-toggle="tab"]').on('shown.bs.tab', e => {
+                const service = $(e.target).attr('id') === 'tab-edh' ? 'EDH' : 'ECCC';
+                search(service);
+            });
+
+            $('#a-previous').click(e => { e.preventDefault(); /* implement if needed */ });
+            $('#a-next').click(e => { e.preventDefault(); /* implement if needed */ });
+
+            // initial load
             search('ECCC');
         });
     </script>
