--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link active" id="tab-eccc" data-toggle="tab" href="#tab-csw-results-eccc" role="tab">Our institute's data</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="tab-edh" data-toggle="tab" href="#tab-csw-results-edh" role="tab">DFO's data</a>
+                            <a class="nav-link" id="tab-edh" data-toggle="tab" href="#tab-csw-results-edh" role="tab">DFO's data (login to call the API)</a>
                         </li>
                     </ul>
                     <div class="tab-content mt-3" id="cswTabsContent">
